tests/ui/statics/uninhabited-static.stderr
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:11:1
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: `#[deny(uninhabited_static)]` (part of `#[deny(future_incompatible)]`) on by default

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:14:1
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:5:5
   |
LL |     static VOID: Void;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:7:5
   |
LL |     static NEVER: !;
   |     ^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>

error[E0080]: constructing invalid value: encountered a value of uninhabited type `Void`
  --> $DIR/uninhabited-static.rs:11:31
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `VOID2` failed here

error[E0080]: constructing invalid value: encountered a value of uninhabited type `Void`
  --> $DIR/uninhabited-static.rs:14:32
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   |                                ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `NEVER2` failed here

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0080`.
Future incompatibility report: Future breakage diagnostic:
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:11:1
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: `#[deny(uninhabited_static)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:14:1
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: `#[deny(uninhabited_static)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:5:5
   |
LL |     static VOID: Void;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: `#[deny(uninhabited_static)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:7:5
   |
LL |     static NEVER: !;
   |     ^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: `#[deny(uninhabited_static)]` (part of `#[deny(future_incompatible)]`) on by default

